<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_not_whitelisted">This account is not whitelisted for testing Google Play Games.</string>
    <string name="amazon_sdk_notice">Amazon Fork of JWPlayer SDK can be reached through the following repository: https://mvn.jwplayer.com/content/repositories/amazon/</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animationPushTranslateDuration">300</string>
    <string name="app_id">N/A</string>
    <string name="app_name">Talking Ben the Dog</string>
    <string name="app_name_short">Talking Ben</string>
    <string name="app_update_dialog_button">Update Now</string>
    <string name="app_update_dialog_title">New Update Available</string>
    <string name="app_year_created">2011</string>
    <string name="app_year_current">2023</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="audio_reboot">Could not acquire the microphone. If the problem persists, try restarting the device.</string>
    <string name="audio_reboot_button">Close</string>
    <string name="audio_reboot_title">Audio error</string>
    <string name="billing_error_msg1">In-app billing is currently not supported on your device.</string>
    <string name="billing_error_msg2">There was a problem processing your in-app billing request.</string>
    <string name="billing_error_title1">In-app billing error</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="res_0x7f130030_campaign_appname">getAppName</string>
    <string name="res_0x7f130031_campaign_iconurl">getIconUrl</string>
    <string name="res_0x7f130032_campaign_imageurl">getImageUrl</string>
    <string name="cancel">Cancel</string>
    <string name="cantRecord">Can\'t record. Make sure the SD card is mounted and has enough space.</string>
    <string name="caps_no">NO</string>
    <string name="caps_yes">YES</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="child_safe">CHILD SAFE</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="core_update_fs_error">File system error during core update</string>
    <string name="country">Country</string>
    <string name="country_afghanistan">Afghanistan</string>
    <string name="country_albania">Albania</string>
    <string name="country_algeria">Algeria</string>
    <string name="country_andorra">Andorra</string>
    <string name="country_angola">Angola</string>
    <string name="country_antigua_and_barbuda">Antigua and Barbuda</string>
    <string name="country_argentina">Argentina</string>
    <string name="country_armenia">Armenia</string>
    <string name="country_australia">Australia</string>
    <string name="country_austria">Austria</string>
    <string name="country_azerbaijan">Azerbaijan</string>
    <string name="country_bahamas">Bahamas</string>
    <string name="country_bahrain">Bahrain</string>
    <string name="country_bangladesh">Bangladesh</string>
    <string name="country_barbados">Barbados</string>
    <string name="country_belarus">Belarus</string>
    <string name="country_belgium">Belgium</string>
    <string name="country_belize">Belize</string>
    <string name="country_benin">Benin</string>
    <string name="country_bhutan">Bhutan</string>
    <string name="country_bolivia">Bolivia</string>
    <string name="country_bosnia_and_herzegovina">Bosnia and Herzegovina</string>
    <string name="country_botswana">Botswana</string>
    <string name="country_brazil">Brazil</string>
    <string name="country_brunei">Brunei</string>
    <string name="country_bulgaria">Bulgaria</string>
    <string name="country_burkina_faso">Burkina Faso</string>
    <string name="country_burundi">Burundi</string>
    <string name="country_cambodia">Cambodia</string>
    <string name="country_cameroon">Cameroon</string>
    <string name="country_canada">Canada</string>
    <string name="country_cape_verde">Cape Verde</string>
    <string name="country_central_african_republic">Central African Republic</string>
    <string name="country_chad">Chad</string>
    <string name="country_chile">Chile</string>
    <string name="country_china">China</string>
    <string name="country_colombia">Colombia</string>
    <string name="country_comoros">Comoros</string>
    <string name="country_costa_rica">Costa Rica</string>
    <string name="country_croatia">Croatia</string>
    <string name="country_cuba">Cuba</string>
    <string name="country_cyprus">Cyprus</string>
    <string name="country_czech_republic">Czech Republic</string>
    <string name="country_democratic_republic_of_the_congo">Democratic Republic of the Congo</string>
    <string name="country_denmark">Denmark</string>
    <string name="country_djibouti">Djibouti</string>
    <string name="country_dominica">Dominica</string>
    <string name="country_dominican_republic">Dominican Republic</string>
    <string name="country_ecuador">Ecuador</string>
    <string name="country_egypt">Egypt</string>
    <string name="country_el_salvador">El Salvador</string>
    <string name="country_equatorial_guinea">Equatorial Guinea</string>
    <string name="country_eritrea">Eritrea</string>
    <string name="country_estonia">Estonia</string>
    <string name="country_ethiopia">Ethiopia</string>
    <string name="country_fiji">Fiji</string>
    <string name="country_finland">Finland</string>
    <string name="felis_navigation_jw_videogallery_player_url">o7internal://videogallery/jw/player/{id}</string>
    <string name="felis_navigation_jw_videogallery_playlist_url">o7internal://videogallery/jw/playlist/{id}</string>
    <string name="felis_navigation_jw_videogallery_showcase_url">o7internal://videogallery/jw/showcase</string>
    <string name="jwplayer_audio_and_subtitles">Audio &amp; Subtitles</string>
    <string name="jwplayer_audio_tracks">Audio</string>
    <string name="jwplayer_back">Back</string>
    <string name="jwplayer_cancel">Cancel</string>
    <string name="jwplayer_cast_disconnect">Disconnect</string>
    <string name="jwplayer_cast_playing_on">Playing on %1$s</string>
    <string name="jwplayer_chromecast">Chromecast</string>
    <string name="jwplayer_close">Close</string>
    <string name="jwplayer_close_menu">close menu</string>
    <string name="jwplayer_description">description</string>
    <string name="jwplayer_done">Done</string>
    <string name="jwplayer_enter_picture_in_picture">enter picture in picture</string>
    <string name="jwplayer_exit_fullscreen">Exit Fullscreen</string>
    <string name="jwplayer_forward_15_seconds">fast forward 15 seconds</string>
    <string name="jwplayer_fullscreen">enter full screen</string>
    <string name="jwplayer_next">next playlist item</string>
    <string name="jwplayer_pause">Pause</string>
    <string name="jwplayer_play">Play</string>
    <string name="jwplayer_playback_rates">Playback speed</string>
    <string name="jwplayer_previous_playlist_item">previous playlist item</string>
    <string name="jwplayer_quality">Quality</string>
    <string name="jwplayer_repeat">Repeat</string>
    <string name="jwplayer_rewind_15_seconds">rewind 15 seconds</string>
    <string name="jwplayer_subtitles">Subtitles</string>
    <string name="jwplayer_title">title</string>
    <string name="offers_downloading_offers">Downloading offers…</string>
    <string name="offers_no_offers_available">No offers are available right now.</string>
    <string name="wardrobe_offers_header_description">Complete an offer to get test tubes.</string>
</resources>