<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/title_guideline_left" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="114dp"/>
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/title_guideline_right" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="114dp"/>
    <TextView android:gravity="center" android:id="@+id/center_title_txt" android:visibility="gone" android:layout_marginTop="@dimen/jw_controls_title_top_margin" android:contentDescription="@string/jwplayer_title" app:layout_constraintEnd_toEndOf="@+id/title_guideline_right" app:layout_constraintStart_toStartOf="@+id/title_guideline_left" app:layout_constraintTop_toTopOf="0" style="@style/JWText.CenterControlsTitle"/>
    <TextView android:gravity="center" android:id="@+id/center_description_txt" android:layout_marginTop="@dimen/jw_controls_description_top_margin" android:contentDescription="@string/jwplayer_description" app:layout_constraintEnd_toEndOf="@+id/title_guideline_right" app:layout_constraintStart_toStartOf="@+id/title_guideline_left" app:layout_constraintTop_toBottomOf="@+id/center_title_txt" style="@style/JWText.CenterControlsDescription"/>
    <ImageView android:id="@+id/center_close_img" android:visibility="gone" android:layout_marginTop="@dimen/jw_controls_top_icons_margin" android:src="@drawable/ic_jw_close" android:contentDescription="@string/jwplayer_exit_fullscreen" android:layout_marginStart="@dimen/jw_controls_horizontal_margin" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ic_jw_close" style="@style/JWIcon.CenterControlsClose"/>
    <FrameLayout android:id="@+id/center_container" android:layout_marginStart="12dp" android:layout_marginEnd="12dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/center_forward_btn" app:layout_constraintStart_toEndOf="@+id/center_rewind_btn" app:layout_constraintTop_toTopOf="0" app:layout_constraintVertical_bias="0.475" style="@style/JWContainer.CenterControlsCombo">
        <ImageView android:id="@+id/center_play_btn" android:visibility="gone" android:src="@drawable/ic_jw_play" android:contentDescription="@string/jwplayer_play" app:srcCompat="@drawable/ic_jw_play" style="@style/JWIcon.CenterControlsPlay"/>
        <ImageView android:id="@+id/center_pause_btn" android:visibility="gone" android:src="@drawable/ic_jw_pause" android:contentDescription="@string/jwplayer_pause" app:srcCompat="@drawable/ic_jw_pause" style="@style/JWIcon.CenterControlsPause"/>
        <ProgressBar android:id="@+id/center_buffer_icon" android:focusable="false" android:focusableInTouchMode="false" android:visibility="visible" android:indeterminate="true" android:indeterminateDrawable="@drawable/ic_jw_buffer" android:contentDescription="@null" android:importantForAccessibility="no" style="@style/JWIcon.CenterControlsBuffer"/>
        <ImageView android:id="@+id/center_repeat_btn" android:visibility="gone" android:src="@drawable/ic_jw_replay" android:contentDescription="@string/jwplayer_repeat" app:srcCompat="@drawable/ic_jw_replay" style="@style/JWIcon.CenterControlsRepeat"/>
    </FrameLayout>
    <ImageView android:id="@+id/center_rewind_btn" android:visibility="gone" android:layout_marginRight="12dp" android:src="@drawable/ic_jw_rewind_15" android:contentDescription="@string/jwplayer_rewind_15_seconds" app:layout_constraintBottom_toBottomOf="@+id/center_container" app:layout_constraintEnd_toStartOf="@+id/center_container" app:layout_constraintStart_toEndOf="@+id/center_previous_playlist_item_btn" app:layout_constraintTop_toTopOf="@+id/center_container" app:layout_goneMarginStart="140dp" app:srcCompat="@drawable/ic_jw_rewind_15" style="@style/JWIcon.CenterControlsRewind"/>
    <ImageView android:id="@+id/center_previous_playlist_item_btn" android:visibility="gone" android:layout_marginRight="12dp" android:src="@drawable/ic_jw_next" android:contentDescription="@string/jwplayer_previous_playlist_item" android:rotation="180" android:layout_marginStart="30dp" app:layout_constraintBottom_toBottomOf="@+id/center_container" app:layout_constraintEnd_toStartOf="@+id/center_rewind_btn" app:layout_constraintHorizontal_chainStyle="spread" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="@+id/center_container" app:srcCompat="@drawable/ic_jw_next" style="@style/JWIcon.CenterControlsPrevious"/>
    <ImageView android:id="@+id/center_forward_btn" android:visibility="gone" android:layout_marginLeft="12dp" android:src="@drawable/ic_jw_fast_forward_15" android:contentDescription="@string/jwplayer_forward_15_seconds" app:layout_constraintBottom_toBottomOf="@+id/center_container" app:layout_constraintEnd_toStartOf="@+id/center_next_playlist_item_btn" app:layout_constraintStart_toEndOf="@+id/center_container" app:layout_constraintTop_toTopOf="@+id/center_container" app:layout_goneMarginEnd="140dp" app:srcCompat="@drawable/ic_jw_fast_forward_15" style="@style/JWIcon.CenterControlsForward"/>
    <ImageView android:id="@+id/center_next_playlist_item_btn" android:visibility="gone" android:layout_marginLeft="12dp" android:src="@drawable/ic_jw_next" android:contentDescription="@string/jwplayer_next" android:layout_marginEnd="30dp" app:layout_constraintBottom_toBottomOf="@+id/center_container" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/center_forward_btn" app:layout_constraintTop_toTopOf="@+id/center_container" app:srcCompat="@drawable/ic_jw_next" style="@style/JWIcon.CenterControlsNext"/>
    <ImageView android:id="@+id/center_cast_img" android:visibility="gone" android:layout_marginTop="@dimen/jw_controls_top_icons_margin" android:src="@drawable/ic_jw_cast_off" android:contentDescription="@string/jwplayer_chromecast" android:layout_marginEnd="@dimen/jw_controls_horizontal_margin" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ic_jw_cast_off" style="@style/JWIcon.CenterControlsCast"/>
    <ImageView android:id="@+id/center_pip_btn" android:visibility="gone" android:layout_marginTop="@dimen/jw_controls_top_icons_margin" android:src="@drawable/ic_jw_pip" android:contentDescription="@string/jwplayer_enter_picture_in_picture" app:layout_constraintRight_toLeftOf="@+id/center_cast_img" app:layout_constraintTop_toTopOf="0" app:layout_goneMarginEnd="@dimen/jw_controls_horizontal_margin" app:srcCompat="@drawable/ic_jw_pip" style="@style/JWIcon.CenterControlsPip"/>
    <LinearLayout android:gravity="center" android:id="@+id/center_connecting_to_container" android:paddingTop="6dp" android:paddingBottom="6dp" android:visibility="gone" android:layout_marginTop="16dp" android:paddingStart="16dp" android:paddingEnd="16dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/center_description_txt" style="@style/JWContainer.CenterControlsCastIndicator">
        <ProgressBar android:id="@+id/center_connecting_progress" android:layout_marginRight="11dp" android:indeterminate="true" android:indeterminateDrawable="@drawable/ic_jw_cast_connecting" style="@style/JWIcon.CenterControlsCastConnecting"/>
        <TextView android:layout_gravity="center" android:id="@+id/center_cast_status_tv" style="@style/JWText.CenterControlsCastStatus"/>
    </LinearLayout>
    <FrameLayout android:id="@+id/center_fullscreen_container" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20dp" android:layout_marginEnd="@dimen/jw_controls_horizontal_margin" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" style="@style/JWContainer">
        <ImageView android:id="@+id/center_enter_fullscreen_btn" android:visibility="visible" android:src="@drawable/ic_jw_enter_fullscreen" android:contentDescription="@string/jwplayer_fullscreen" app:srcCompat="@drawable/ic_jw_enter_fullscreen" style="@style/JWIcon.CenterControlsFullscreen"/>
        <ImageView android:id="@+id/center_exit_fullscreen_btn" android:visibility="gone" android:src="@drawable/ic_jw_exit_fullscreen" android:contentDescription="@string/jwplayer_exit_fullscreen" app:srcCompat="@drawable/ic_jw_enter_fullscreen" style="@style/JWIcon.CenterControlsFullscreen"/>
    </FrameLayout>
</merge>
