<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" style="@style/JWView.CastDialog">
    <TextView android:id="@+id/cast_dialog_playing_on_tv" android:layout_margin="@dimen/jw_cast_status_margin" android:text="@string/jwplayer_cast_playing_on" app:layout_constraintBottom_toTopOf="@+id/cast_dialog_cancel_tv" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0" style="@style/JWText.CastDialogDevice"/>
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/cast_dialog_guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5"/>
    <TextView android:id="@+id/cast_dialog_cancel_tv" android:layout_margin="@dimen/jw_cast_dialog_button_margin_top" android:text="@string/jwplayer_cancel" android:textAllCaps="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toLeftOf="@+id/cast_dialog_guideline" style="@style/JWText.CastDialogCancel"/>
    <TextView android:id="@+id/cast_dialog_disconnect_tv" android:layout_margin="@dimen/jw_cast_dialog_button_margin_top" android:text="@string/jwplayer_cast_disconnect" android:textAllCaps="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toRightOf="@+id/cast_dialog_guideline" app:layout_constraintRight_toRightOf="0" style="@style/JWText.CastDialogDisconnect"/>
</androidx.constraintlayout.widget.ConstraintLayout>
